--- a/app/templates/exam.html
+++ b/app/templates/exam.html
@@ -3,7 +3,7 @@
 {% block content %}
 <p>My name is Connor Smallwood and I am a Senior MIS major. I am from Newnan,Ga and have been there pretty much my whole life. I am also half korean.</p>
 
-<p>I went to Trinity Christian school in Peachtree City,GA. I ran track, against Jones County, and played soccer. My athletic was nothing crazy. Got 5th at state for the 4x100 though.</p>
+<p>I went to Trinity Christian school in Peachtree City,GA. I ran track, against Jones County, and played soccer. My athletic career was nothing crazy. Got 5th at state for the 4x100 though.</p>
 
 <p>Now at GCSU I am still into soccer being part of the men's club team. I am also part of Pi Kappa Phi. I recently joined the GCSU ambassadors where hopefully I can spread my amazing college experience to other potential students</p>
 
